--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,6 @@
 </head>
   <body>
     <h1> hello again</h1>
-    Hello , world!
+    <h2>Hello , world!</h2>
   </body>
-  <script>src="script.js"</script>
 </html>
