--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <title>Hello</title>
 </head>
   <body>
-    <h1 style="color:blue;"> hello again</h1>
+    <h1 style="color:red;"> hello again</h1>
     <h2>Hello , world!</h2>
       <h3>Bye<h3>
   </body>
